# otus-cpp-homework2

./: CMakeLists.txt  IP.hpp  README  err.txt  ip_filter.cpp  main.cpp  out.txt  test_version.cpp
.github/workflows/: release.yml
build_tree/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  ip_filter  test_version
